fixed pagination visibility and position on search

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,7 +73,7 @@ list-detail-app {
         }
 
         .pagination-container {
-            height: 50px;
+            height: 30px;
         }
 
         .pagination-row .col-sm {
